# AI-Lab1

./: CMakeLists.txt  data4.in
headers/: Problem.h  State.h
sources/: Controller.cpp  Problem.cpp  State.cpp
