cmake_minimum_required(VERSION 3.13)
project(lab1_C__)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_REQUIRED_FLAGS -std=c++x0)
add_executable(lab1_C__ main.cpp sources/Controller.cpp headers/Controller.h sources/Problem.cpp headers/Problem.h sources/State.cpp headers/State.h sources/UI.cpp headers/UI.h)